upgrade to Spring Boot 3.4.4

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,9 +71,31 @@ cpMaster:
       stressScenarios:
         get: "/apis/chaos-mesh.org/v1alpha1/namespaces/{namespace}/stresschaos/{chaosname}"
 
-
 commonApi:
   url: ${CP_PORTAL_COMMON_API_URI}
   authorization:
     id: admin
     password: cpcommon!123
+
+logging:
+  config: classpath:logback-spring.xml
+
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+
+logging:
+  file:
+    path: logs
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+logging:
+  file:
+    path: /home/1000/logs
