--- a/build.gradle
+++ b/build.gradle
@@ -1,127 +1,100 @@
-buildscript {
-	ext {
-		springBootVersion = '2.7.3'
-		springBootManagementPlugin = '1.0.11.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath "io.spring.gradle:dependency-management-plugin:${springBootManagementPlugin}"
-		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
-	}
+plugins {
+    id 'java'
+    id 'jacoco'
+    id 'org.springframework.boot' version '3.4.4'
+    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.sonarqube' version '6.0.1.5171'
 }
-
-
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'jacoco'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: "org.sonarqube"
 
 group = 'org.container.platform.chaos.collector'
-sourceCompatibility = '1.8'
 
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
-sonarqube {
-	properties {
-		property "sonar.sourceEncoding", "UTF-8"
-		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco.xml"
-	}
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
+configurations {
+    all {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+}
 
 ext {
-	apacheHttpClientVersion = '4.5.12'
-	gsonVersion = '2.8.6'
-	lombokVersion = '1.18.12'
-	jacocoVersion = '0.8.5'
-	jjwtVersion = '0.9.1'
-	jsonpathVersion = '2.4.0'
-	springCloudVersion = '2021.0.3'
+    httpcoreVersion = '4.4.6'
+    gsonVersion = '2.8.9'
+    lombokVersion = '1.18.30'
+    jacocoVersion = '0.8.8'
+    jjwtVersion = '0.9.1'
+    jsonpathVersion = '2.9.0'
+    springCloudVersion = '2024.0.0'
 }
 
-jar {
-	archivesBaseName = 'container-platform-chaos-collector'
-    enabled = false
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 dependencies {
-	compile "org.springframework.boot:spring-boot-starter-security"
-	compile "org.springframework.boot:spring-boot-starter-web"
-	compile "org.springframework.boot:spring-boot-starter-aop"
-	compile 'org.springframework.boot:spring-boot-starter-actuator'
-	compile "org.apache.httpcomponents:httpclient:${apacheHttpClientVersion}"
-	compile "com.google.code.gson:gson:${gsonVersion}"
-	compileOnly "org.projectlombok:lombok:${lombokVersion}"
-	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-	compile('org.springframework.boot:spring-boot-starter-freemarker')
-	compile "io.jsonwebtoken:jjwt:${jjwtVersion}"
-
-	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
-
-
-	compile "com.jayway.jsonpath:json-path:${jsonpathVersion}"
-	compile 'com.fasterxml.jackson.core:jackson-core'
-	compile 'com.fasterxml.jackson.core:jackson-databind'
-	compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-	compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.3'
-	testCompile "org.springframework.boot:spring-boot-starter-test"
-	testImplementation('junit:junit:4.13')
-
-	implementation 'org.springframework.retry:spring-retry'
-	implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.9'
-	implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
-	implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-	implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.32'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.0'
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
-	implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
-	implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
-	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
-
-	compile( "org.springframework.cloud:spring-cloud-starter-vault-config")
-	compile 'commons-io:commons-io:2.11.0'
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation "org.springframework.boot:spring-boot-starter-test"
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
+    implementation("org.apache.httpcomponents:httpcore:${httpcoreVersion}")
+    implementation "com.google.code.gson:gson:${gsonVersion}"
+    implementation "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    implementation "io.jsonwebtoken:jjwt:${jjwtVersion}"
+    implementation "com.jayway.jsonpath:json-path:${jsonpathVersion}"
+    implementation 'com.fasterxml.jackson.core:jackson-core'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
+    implementation 'com.github.spotbugs:spotbugs-annotations:3.1.3'
+    implementation 'org.springframework.retry:spring-retry'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation "org.springframework.cloud:spring-cloud-starter-vault-config"
+    implementation 'commons-io:commons-io:2.15.1'
+    testImplementation('junit:junit:4.13.1')
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'net.minidev:json-smart:2.5.2'
+    implementation 'io.github.classgraph:classgraph:4.8.179'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '4.0.5'
 }
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco.xml"
+    }
 }
 
 jacoco {
-	toolVersion = "${jacocoVersion}"
-	reportsDir = file("$buildDir/jacocoReport")
+    toolVersion = "${jacocoVersion}"
 }
 
 test {
-	ignoreFailures = true
-	jacoco {
-		destinationFile = file("$buildDir/jacoco/jacoco-overall.exec")
-	}
-	finalizedBy("jacocoTestReport")
+    ignoreFailures = true
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacoco-overall.exec")
+    }
+    finalizedBy("jacocoTestReport")
 }
 
 jacocoTestReport {
-	reports {
-		xml.enabled true
-		xml.destination file("build/reports/jacoco.xml")
-	}
+    reports  {
+        xml.required.set(true)
+        html.required.set(true)
+        xml.destination file("build/reports/jacoco.xml")
+        html.destination file("build/reports/jacoco.html")
+    }
 }
